# mimicaw

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  aliases.js  search-index.js  settings.html  source-files.js
.github/workflows/: coverage.yml  doc.yml  test.yml  workflow.yml
examples/: assert.rs  async_std.rs  benches.rs  many.rs  simple.rs  tokio.rs  xunit.rs
examples/framework/: Cargo.toml
examples/framework/macros/: Cargo.toml  lib.rs
examples/framework/src/: lib.rs
examples/framework/tests/: custom_test_frameworks.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.AsRef.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  (+5 more)
implementors/mimi/: trait.EventHandler.js
implementors/mimicaw/: trait.TestRunner.js
mimi/: all.html  enum.Outcome.html  fn.run_tests.html  index.html  sidebar-items.js  struct.Benchmark.html  struct.DefaultEventHandler.html  struct.Handle.html  struct.Measurement.html  struct.Outcome.html  struct.Report.html  struct.Test.html  struct.TestDriver.html  struct.TestOptions.html  struct.TestRunner.html  struct.TestSuite.html  trait.EventHandler.html
mimi/driver/: struct.TestDriver.html
mimi/event/: enum.Outcome.html  struct.DefaultEventHandler.html  struct.Report.html  trait.EventHandler.html
mimi/suite/: struct.Benchmark.html  struct.Measurement.html  struct.TestOptions.html  struct.TestSuite.html
mimi/test/: struct.Handle.html  struct.Test.html
mimicaw/: all.html  enum.ColorConfig.html  enum.OutputFormat.html  fn.parse_args.html  fn.run_tests.html  fn.run_tests_with_report.html  index.html  sidebar-items.js  struct.Args.html  struct.ExitStatus.html  struct.Outcome.html  struct.Report.html  struct.Test.html  struct.TestDesc.html  struct.TestDriver.html  trait.TestRunner.html
mimicaw/args/: enum.ColorConfig.html  enum.OutputFormat.html  fn.parse_args.html  struct.Args.html
mimicaw/driver/: struct.TestDriver.html  trait.TestRunner.html
mimicaw/report/: struct.Report.html
mimicaw/test/: struct.Outcome.html  struct.Test.html  struct.TestDesc.html
mimicaw_framework/: all.html  attr.test.html  fn.test_runner.html  index.html  sidebar-items.js  type.TestCase.html
mimicaw_framework_macros/: all.html  attr.test.html  index.html  sidebar-items.js
src/: args.rs  driver.rs  event.rs  lib.rs  printer.rs  progress.rs  report.rs  suite.rs  test.rs
src/mimi/: args.rs.html  driver.rs.html  event.rs.html  lib.rs.html  progress.rs.html  suite.rs.html  test.rs.html
src/mimicaw/: args.rs.html  driver.rs.html  lib.rs.html  printer.rs.html  progress.rs.html  report.rs.html  test.rs.html
src/mimicaw_framework/: lib.rs.html
src/mimicaw_framework_macros/: lib.rs.html
tests/: async_std.rs  tokio.rs
(+3 files in other folders)
