[package]
name = "mimicaw"
version = "0.1.2"
description = """
A library for writing asynchronous tests.
"""
license = "MIT OR Apache-2.0"
authors = [ "Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>" ]
edition = "2018"
repository = "https://github.com/ubnt-intrepid/mimicaw.git"
readme = "README.md"
categories = [ "development-tools::testing" ]
keywords = [ "test", "framework", "async" ]

[dependencies]
console = "0.9"
futures-core = "0.3"
futures-channel = "0.3"
futures-util = { version = "0.3", features = [ "std" ], default-features = false }
getopts = "0.2"
num-format = "0.4"
pin-project-lite = "0.1"

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
cargo-husky = "1"
chrono = "0.4"
futures = "0.3"
futures-timer = "2"
maybe-unwind = "0.1"
rand = "0.7"
sxd-document = "0.3"
tokio = { version = "0.2.0", features = [ "full" ] }
version-sync = "0.8"
